tests/ui/typeck/return_type_mismatch.rx
//@ spec: RXS-0042, RXS-0047
fn f() -> i32 {
    return true; //~ ERROR RX2001
}
